[metadata]
name= cryptoGR
version= 0.1.2
author= Vinicius da Silva Nunes
author_email= viniciusnunes02612@gmail.com
maintainer =  Nara Raquel Dias Andrade
maintainer_email = naradiasspn1967@gmail.com
description= This project refers to a password encryptor, which also serves to encrypt and decrypt files through a password entered by users. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NaraAndrad3/Cripto

classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent

[options]
package_dir = 
    =src
packges = find:
install_requires=
    cryptography
    base64
    string
    radom
    hashlib
python_requires = >=3.8

where = src